hphp/hack/test/typecheck/throw_non_exception.php.exp
File "throw_non_exception.php", line 6, characters 9-26:
Invalid exception (Typing[4110])
File "throw_non_exception.php", line 6, characters 9-26:
Expected Throwable because it is used as an exception
File "throw_non_exception.php", line 6, characters 13-24:
But got NonException
