hphp/hack/test/typecheck/throw_non_exception.php
<?hh

class NonException {}

function f(): void {
  throw new NonException();
}
